--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./fullpage.min.css" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Fullpage</title>
+    <title>Präsentation</title>
   </head>
 
   <body>
@@ -40,6 +40,12 @@
 			Übersicht der Projekte
 		</h2>
 
+		  <div class="description">
+
+			  <p>I am Text</p>
+
+		  </div>
+
         <!--<div class="description">
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non nam
@@ -63,8 +69,8 @@
         <h1>
 			Binäres Lampen Display
 		</h1>
-
-		<div class="row">
+		  <img src="./img/SchaltplanBinLampenDisplay_LeonKalliardos.PNG" alt="Schaltplanm">
+		<!--<div class="row">
 
 			<div class="column">
 
@@ -78,7 +84,7 @@
 	
 			</div>
 
-		</div>		
+		</div>	-->
 
       </section>
 
@@ -96,8 +102,26 @@
 			Der Algorithmus
 		</h1>
 
-		<img src="./img/BIN_ALGO.png" class="code" />
-		
+		  <div class="code c1">
+			  <p>
+				  01
+				  02
+				  03
+				  04
+				  05
+				  06
+				  07
+				  08
+				  09
+				  10
+				  11
+				  12
+				  13
+				  14
+				  15
+				  16
+			  </p>
+		  </div>
       </section>
 
 	  <section class="section s7">
@@ -120,6 +144,27 @@
         <h1>
 			Konzept "last"
 		</h1>
+
+		  <div class="code c1">
+			  <p>
+				  <span class="com">01</span> <span class="type">void</span> <span class="func">worldUpdated16x2()</span> {
+				  <span class="com">02</span> 	<span class="op">for</span>(<span class="type">int</span> i <span class="type">int</span> <span class="type">int</span>; i <span class="op"><</span> <span class="value">2</span>; i<span class="op">++</span>) {
+				  <span class="com">03</span> 		<span class="op">for</span>(<span class="type">int</span> j <span class="type">int</span> <span class="type">int</span>; j <span class="op"><</span> <span class="value">16</span>; j<span class="op">++</span>) {
+				  <span class="com">04</span>
+				  <span class="com">05</span> 			<span class="op">if</span>(world16x2_lastUpdate[i][j] <span class="op">!=</span> world16x2[i][j]) {
+				  <span class="com">06</span> 				return true; //World updated
+				  <span class="com">07</span> 			}
+				  <span class="com">08</span> 		}
+				  <span class="com">09</span> 	}
+				  <span class="com">10</span> 	return false; //World did not update
+				  <span class="com">11</span> }
+				  <span class="com">12</span>
+				  <span class="com">13</span>
+				  <span class="com">14</span>
+				  <span class="com">15</span>
+				  <span class="com">16</span>
+			  </p>
+		  </div>
 		
       </section>
 	  <section class="section s10">
@@ -176,7 +221,28 @@
         <h1>
 			Beispiel Spiel "Catch"
 		</h1>
-		
+
+		  <div class="code c1">
+			  <p>
+				  01
+				  02
+				  03
+				  04
+				  05
+				  06
+				  07
+				  08
+				  09
+				  10
+				  11
+				  12
+				  13
+				  14
+				  15
+				  16
+			  </p>
+		  </div>
+
       </section>
 
 	  <section class="section s18">
