--- a/index.html
+++ b/index.html
@@ -413,26 +413,178 @@
 			Eigende Charaktere
 		</h1>
 
-		  <div class="code c1">
-			  <p>
-				  <span class="com">01</span>
-				  <span class="com">02</span>
-				  <span class="com">03</span>
-				  <span class="com">04</span>
-				  <span class="com">05</span>
-				  <span class="com">06</span>
-				  <span class="com">07</span>
-				  <span class="com">08</span>
-				  <span class="com">09</span>
-				  <span class="com">10</span>
-				  <span class="com">11</span>
-				  <span class="com">12</span>
-				  <span class="com">13</span>
-				  <span class="com">14</span>
-				  <span class="com">15</span>
-				  <span class="com">16</span>
-			  </p>
+		  <div class="row">
+
+			  <div class="column">
+
+				  <div class="code c1" id="customCode">
+					  <p>
+						  <span class="com">01</span> <span class="type">void</span> <span class="func">drawCatcher16x2</span>(<span class="type">int</span> y, <span class="type">int</span> x) {
+						  <span class="com">02</span> &nbsp;&nbsp;&nbsp;&nbsp;lcd.<span class="func">createChar</span>(<span class="value">1</span>, catcher16x2);
+						  <span class="com">03</span> &nbsp;&nbsp;&nbsp;&nbsp;lcd.<span class="func">setCursor</span>(x,y);
+						  <span class="com">04</span> &nbsp;&nbsp;&nbsp;&nbsp;lcd.<span class="func">write</span>(<span class="value">1</span>);
+						  <span class="com">05</span> }
+						  <span class="com">06</span>
+						  <span class="com">07</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="type">byte</span> catcher16x2[] =</span> {
+						  <span class="com">08</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B01110</span>,
+						  <span class="com">09</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B10001</span>,
+						  <span class="com">10</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B11011</span>,
+						  <span class="com">11</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B10001</span>,
+						  <span class="com">12</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B01110</span>,
+						  <span class="com">13</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B11111</span>,
+						  <span class="com">14</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B00100</span>,
+						  <span class="com">15</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="value">B01010</span>
+						  <span class="com">16</span> &nbsp;&nbsp;&nbsp;&nbsp;};
+					  </p>
+				  </div>
+
+			  </div>
+
+			  <div class="column">
+
+				  <div class="row">
+
+					  <div class="column">
+
+						  <div class="custom">
+
+							  <table>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+							  </table>
+
+						  </div>
+
+					  </div>
+
+					  <div class="column">
+
+						  <div class="custom">
+
+							  <table>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+								  </tr>
+								  <tr>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="on">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+									  <td class="off">&nbsp;</td>
+								  </tr>
+							  </table>
+
+						  </div>
+
+					  </div>
+
+				  </div>
+
+			  </div>
+
 		  </div>
+
+
 		
       </section>
 	  <section class="section s15">
