--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</h1>
 
 		<h2>
-			Lampen Binär Display
+			Binäres Lampen Display
 			& Arduino Spiele Konsole
 		</h2>
 
@@ -47,7 +47,7 @@
 
 						<span class="project">Projekt 1:
 
-						Binäres Leuchten Display</span>
+						Binäres Lampen Display</span>
 
 						<img src="./img/AufbauBinLampenDisplay_LeonKalliardos.jpg" width="100%">
 				  </p>
@@ -111,10 +111,11 @@
 
 					<li>&#9744; 1x Arduino Uno</li>
 					<li>&#9744; 1x Breadboard</li>
-					<li>&#9744; 1x LCD-Display</li>
-					<li>&#9744; 1x LCD-Display</li>
-					<li>&#9744; 2x Joysticks</li>
-					<li>&#9744; 16x Kabel</li>
+					<li>&#9744; 4x grüne Lampen</li>
+					<li>&#9744; 1x Infrarot-Empfänger</li>
+					<li>&#9744; 1x Infrarot-Fernbedienung</li>
+					<li>&#9744; 4x 220Ω Wiederstände</li>
+					<li>&#9744; 6x Kabel</li>
 
 				</ul>
 
@@ -126,11 +127,11 @@
 
 					<li>&#9744; Rechenzentrum</li>
 					<li>&#9744; Steckplatz für alle Komponenten</li>
-					<li>&#9744; Display der Konsole</li>
-					<li>&#9744; Management der Kabel</li>
-					<li>&#9744; Input Devices der Konsole</li>
+					<li>&#9744; Leuchten fürs Display</li>
+					<li>&#9744; Empfangen von Zahlen</li>
+					<li>&#9744; Senden von Zahlen</li>
+					<li>&#9744; Schutz der Lampen</li>
 					<li>&#9744; Verbindung aller Komponenten</li>
-
 
 				</ul>
 
@@ -204,11 +205,10 @@
 
 					<li>&#9744; 1x Arduino Uno</li>
 					<li>&#9744; 1x Breadboard</li>
-					<li>&#9744; 4x grüne Lampen</li>
-					<li>&#9744; 1x Infrarot-Empfänger</li>
-					<li>&#9744; 1x Infrarot-Fernbedienung</li>
-					<li>&#9744; 4x 220Ω Wiederstände</li>
-					<li>&#9744; 6x Kabel</li>
+					<li>&#9744; 1x LCD-Display</li>
+					<li>&#9744; 1x LCD-Display</li>
+					<li>&#9744; 2x Joysticks</li>
+					<li>&#9744; 16x Kabel</li>
 
 				</ul>
 
@@ -235,10 +235,9 @@
 
 					<li>&#9744; Rechenzentrum</li>
 					<li>&#9744; Steckplatz für alle Komponenten</li>
-					<li>&#9744; Leuchten fürs Display</li>
-					<li>&#9744; Empfangen von Zahlen</li>
-					<li>&#9744; Senden von Zahlen</li>
-					<li>&#9744; Schutz der Lampen</li>
+					<li>&#9744; Display der Konsole</li>
+					<li>&#9744; Management der Kabel</li>
+					<li>&#9744; Input Devices der Konsole</li>
 					<li>&#9744; Verbindung aller Komponenten</li>
 
 				</ul>
@@ -339,14 +338,14 @@
 					<span class="com">06</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="com">03</span>//second joystick</span>
 					<span class="com">07</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="func">pinMode</span>(playerTwoPush, <span class="value">INPUT_PULLUP</span>);
 					<span class="com">08</span> }
-					<span class="com">09</span>
+					<!--<span class="com">09</span>
 					<span class="com">10</span>
 					<span class="com">11</span>
 					<span class="com">12</span>
 					<span class="com">13</span>
 					<span class="com">14</span>
 					<span class="com">15</span>
-					<span class="com">16</span>
+					<span class="com">16</span>-->
 				</p>
 			</div>
 
@@ -426,13 +425,13 @@
 					<span class="com">07</span> &nbsp;&nbsp;&nbsp;&nbsp;}
 					<span class="com">08</span>
 					<span class="com">09</span> }
-					<span class="com">10</span>
+					<!--<span class="com">10</span>
 					<span class="com">11</span>
 					<span class="com">12</span>
 					<span class="com">13</span>
 					<span class="com">14</span>
 					<span class="com">15</span>
-					<span class="com">16</span>
+					<span class="com">16</span>-->
 				</p>
 			</div>
 
@@ -512,12 +511,12 @@
 				  <span class="com">08</span> <span class="com">&nbsp;* 4 == Test Inputs</span>
 				  <span class="com">09</span> <span class="com">&nbsp;*/</span>
 				  <span class="com">10</span> <span class="type">bool</span> gameStatus <span class="logic">=</span> <span class="value">false</span>;
-				  <span class="com">11</span>
+				  <!--<span class="com">11</span>
 				  <span class="com">12</span>
 				  <span class="com">13</span>
 				  <span class="com">14</span>
 				  <span class="com">15</span>
-				  <span class="com">16</span>
+				  <span class="com">16</span>-->
 			  </p>
 		  </div>
 
