--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
 				<p>
 					<span class="com">01</span> <span class="type">void</span> <span class="func">setup</span>() {
 					<span class="com">02</span>
-					<span class="com">03</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="com">03</span>//first joystick</span>
+					<span class="com">03</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="com"></span>//first joystick</span>
 					<span class="com">04</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="func">pinMode</span>(playerOnePush, <span class="value">INPUT_PULLUP</span>);
 					<span class="com">05</span>
-					<span class="com">06</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="com">03</span>//second joystick</span>
+					<span class="com">06</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="com"></span>//second joystick</span>
 					<span class="com">07</span> &nbsp;&nbsp;&nbsp;&nbsp;<span class="func">pinMode</span>(playerTwoPush, <span class="value">INPUT_PULLUP</span>);
 					<span class="com">08</span> }
 					<!--<span class="com">09</span>
